--- a/rally/templates/main.html
+++ b/rally/templates/main.html
@@ -18,10 +18,10 @@
 
 </head>
 <body>
+    {% include "navbar.html" %}
+    <br>
     
-    <div class="container">
-        <h3>Human Resources</h3>
-    </div>
+    {% include "base.html" %}
   
 
     {% block scripts %}
