--- a/rally/templates/main.html
+++ b/rally/templates/main.html
@@ -19,11 +19,98 @@
 </head>
 <body>
     {% include "navbar.html" %}
-    <br>
     
-    {% include "base.html" %}
+    
+    <div class="container-fluid padding">
+      <div class="row welcome text-center">
+          <div class="container">
+          <div class="row">
+              <div class="col-md-6 col-lg-3">
+                  <div class="container">
+                      <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+                          <ul class="navbar-nav center" >
+                              <li class="nav-item">
+                                  <button routerLink="neighborhood"
+                                  class="m-1 btn btn-light btn-outline-primary" Button>Neighborhood</button>
+                              </li>
+                      
+                              <li class="nav-item">
+                                  <button routerLink="business"
+                                  class="m-1 btn btn-light btn-outline-primary" Button>Business</button>
+                              </li>
+                          </ul>
+                      </nav>
+                  </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                  <div class="container">
+                      <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+                          <ul class="navbar-nav center" >
+                              <li class="nav-item">
+                                  <button routerLink="neighborhood"
+                                  class="m-1 btn btn-light btn-outline-primary" Button>Neighborhood</button>
+                              </li>
+                      
+                              <li class="nav-item">
+                                  <button routerLink="business"
+                                  class="m-1 btn btn-light btn-outline-primary" Button>Business</button>
+                              </li>
+                          </ul>
+                      </nav>
+                  </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                  <div class="container">
+                      <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+                          <ul class="navbar-nav center" >
+                              <li class="nav-item">
+                                  <button routerLink="neighborhood"
+                                  class="m-1 btn btn-light btn-outline-primary" Button>Neighborhood</button>
+                              </li>
+                      
+                              <li class="nav-item">
+                                  <button routerLink="business"
+                                  class="m-1 btn btn-light btn-outline-primary" Button>Business</button>
+                              </li>
+                          </ul>
+                      </nav>
+                  </div>
+              </div>
+          </div>
+          </div>
+          
+              
   
+              
+              
+              
+          
+      </div>
+    </div>
+  
+    <div class="container">
+    <div class="container-fluid padding">
+    <div class="row">
+    {% for post in post %}
+    
+        <div class="col-md-6 col-lg-4">
+            <div class="card border-0 transform-on-hover">
+                <img class="card-imd-top" src="{{post.image.url}}"  href="{% url 'details' post.id %}"alt="">
+                <div class="card-body">
+                    <h4 class="card-title">{{post.description}}</h4>
+                    <p class="card-text">{{post.driver}} - {{post.section}} : {{post.status}}</p>
+                    <a href="/details" class="btn btn-outline-secondary">View Details</a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
+    
+    </div>
+    </div>
 
+  
+    
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
      {% bootstrap_javascript %}
