--- a/rally/templates/navbar.html
+++ b/rally/templates/navbar.html
@@ -21,7 +21,7 @@
         <a class="logo nav__links" href="/">Home</a>
         <nav>
             <ul class="nav__links">
-                <li><a href="/profile">Profile</a></li>
+                <li><a href="/profile/{{user.username}}">Profile</a></li>
                 <li><a href="/details">Details</a></li>
                 <li><a href="/edit-profile">Edit Profile</a></li>
                 <li><a href="/create-profile">Create Profile</a></li>
