--- a/rally/templates/main.html
+++ b/rally/templates/main.html
@@ -99,7 +99,7 @@
                 <div class="card-body">
                     <h4 class="card-title">{{post.description}}</h4>
                     <p class="card-text">{{post.driver}} - {{post.section}} : {{post.status}}</p>
-                    <a href="/details" class="btn btn-outline-secondary">View Details</a>
+                    <a href="{% url 'details' post.id %}" class="btn btn-outline-secondary">View Details</a>
                 </div>
             </div>
         </div>
