--- a/rally/templates/django_registration/registration_form.html
+++ b/rally/templates/django_registration/registration_form.html
@@ -1,5 +1,5 @@
 {%extends "registration/base.html"%}
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 {% block content %}
 <div class="container">
   <div class="row">
@@ -12,18 +12,18 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Edit Profile</h3>
+          <h3 class="text-center">Sign Up</h3>
         </div>
         <div class="panel-body">
 
-          <form  action="" method="post">
+          <form  action="/accounts/register/" method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Profile">
+              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
             </div>
 
-            <input type="hidden" name="next" value="{% url 'profile' %}">
+            <input type="hidden" name="next" value="{% url 'create_profile' %}">
 
           </form>
 
