--- a/rally/templates/navbar.html
+++ b/rally/templates/navbar.html
@@ -21,13 +21,22 @@
         <a class="logo nav__links" href="/">Home</a>
         <nav>
             <ul class="nav__links">
-                <li><a href="/profile/{{user.username}}">Profile</a></li>
-                <li><a href="/details">Details</a></li>
-                <li><a href="/edit-profile">Edit Profile</a></li>
-                <li><a href="/create-profile">Create Profile</a></li>
+                {% if user.is_authenticated %}
+                <li><a href="/create_post">Create Post</a></li>
+                
+                <li><a href="/logout">Logout</a></li>
+                <li><a class="cta" href="/profile/{{user.username}}">Profile</a></li>
+                {% else %}
+                
+                <li><a href="/accounts/register ">Register</a></li>
+                <li><a href="/accounts/login">Login</a></li>
+                {% endif %} 
+                
+                
+
             </ul>
         </nav>
-        <a class="cta" href="#">Contact</a>
+        
         <p class="menu cta">Menu</p>
     </header>
     <div class="overlay">
